working but uncomplet version

--- a/HouHavn.Web/Pages/Display/BoatInfo.cshtml
+++ b/HouHavn.Web/Pages/Display/BoatInfo.cshtml
@@ -25,8 +25,8 @@
                 <dt>@Html.DisplayNameFor(model => model.Boat.Width)</dt>
                 <dd>@Html.DisplayFor(model => model.Boat.Width) meter</dd>
 
-                <dt>@Html.DisplayNameFor(model => model.Boat.Dept)</dt>
-                <dd>@Html.DisplayFor(model => model.Boat.Dept) meter</dd>
+                <dt>@Html.DisplayNameFor(model => model.Boat.Depth)</dt>
+                <dd>@Html.DisplayFor(model => model.Boat.Depth) meter</dd>
 
                 <dt>@Html.DisplayNameFor(model => model.Boat.Notes)</dt>
                 <dd>@Html.DisplayFor(model => model.Boat.Notes)</dd>
