--- a/HouHavn.Web/Pages/Lists/Boats/Edit.cshtml
+++ b/HouHavn.Web/Pages/Lists/Boats/Edit.cshtml
@@ -48,12 +48,12 @@
     </div>
 
     <div class="input">
-        <input asp-for="Boat.Dept" placeholder=" " />
-        <label asp-for="Boat.Dept"></label>
+        <input asp-for="Boat.Depth" placeholder=" " />
+        <label asp-for="Boat.Depth"></label>
         <div class="slider"></div>
     </div>
     <div>
-        <span asp-validation-for="Boat.Dept" class="error"></span>
+        <span asp-validation-for="Boat.Depth" class="error"></span>
     </div>
 
     <div class="select">
