--- a/HouHavn.Web/Pages/Creation/Boats.cshtml
+++ b/HouHavn.Web/Pages/Creation/Boats.cshtml
@@ -7,11 +7,12 @@
 
 <h2>Opret båd</h2>
 <hr />
+
 <form method="post" autocomplete="off">
     @*<div asp-validation-summary="All" class="error"></div>*@
 
     <div class="input">
-        <input asp-for="Boat.Name" placeholder=" "/>
+        <input asp-for="Boat.Name" placeholder=" " />
         <label asp-for="Boat.Name"></label>
         <div class="slider"></div>
     </div>
@@ -20,7 +21,7 @@
     </div>
 
     <div class="input">
-        <input asp-for="Boat.Type" placeholder=" "/>
+        <input asp-for="Boat.Type" placeholder=" " />
         <label asp-for="Boat.Type"></label>
         <div class="slider"></div>
     </div>
@@ -29,7 +30,7 @@
     </div>
 
     <div class="input">
-        <input asp-for="Boat.Length" placeholder=" "/>
+        <input asp-for="Boat.Length" placeholder=" " />
         <label asp-for="Boat.Length"></label>
         <div class="slider"></div>
     </div>
@@ -38,7 +39,7 @@
     </div>
 
     <div class="input">
-        <input asp-for="Boat.Width" placeholder=" "/>
+        <input asp-for="Boat.Width" placeholder=" " />
         <label asp-for="Boat.Width"></label>
         <div class="slider"></div>
     </div>
@@ -47,12 +48,12 @@
     </div>
 
     <div class="input">
-        <input asp-for="Boat.Dept" placeholder=" " />
-        <label asp-for="Boat.Dept"></label>
+        <input asp-for="Boat.Depth" placeholder=" " />
+        <label asp-for="Boat.Depth"></label>
         <div class="slider"></div>
     </div>
     <div>
-        <span asp-validation-for="Boat.Dept" class="error"></span>
+        <span asp-validation-for="Boat.Depth" class="error"></span>
     </div>
 
     <div class="select">
@@ -79,9 +80,10 @@
     </div>
 
     <div class="submit">
-        <input type="submit" value="Opret Båd" class="create"/>
+        <input type="submit" value="Opret Båd" class="create" />
     </div>
 </form>
+
 
 
 @section Scripts {
