--- a/HouHavn.Web/Pages/Creation/Boats.cshtml
+++ b/HouHavn.Web/Pages/Creation/Boats.cshtml
@@ -7,83 +7,104 @@
 
 <h2>Opret båd</h2>
 <hr />
+@if (Model.IsBerthEmpty || Model.IsOwnerEmpty)
+{
 
-<form method="post" autocomplete="off">
-    @*<div asp-validation-summary="All" class="error"></div>*@
+    if (Model.IsBerthEmpty && Model.IsOwnerEmpty)
+    {
+        <h2 class="error">Der er ingen ledige pladser og ingen kunder oprettet</h2>
+        <a asp-page="/Creation/Berths" class="button">Opret plads</a>
+        <a asp-page="/Creation/People" class="button">Opret kunde</a>
+    }
+    else if (Model.IsOwnerEmpty)
+    {
+        <h2 class="error">Der er ikke oprettet nogen kunder </h2>
+        <a asp-page="/Creation/People" class="button">Opret kunde</a>
+    }
+    else    
+    {
+        <h2 class="error">Der er ingen ledige pladser</h2>
+        <a asp-page="/Creation/Berths" class="button">Opret plads</a>
+    }
+}
+else
+{
+    <form method="post" autocomplete="off">
+        @*<div asp-validation-summary="All" class="error"></div>*@
 
-    <div class="input">
-        <input asp-for="Boat.Name" placeholder=" " />
-        <label asp-for="Boat.Name"></label>
-        <div class="slider"></div>
-    </div>
-    <div>
-        <span asp-validation-for="Boat.Name" class="error"></span>
-    </div>
+        <div class="input">
+            <input asp-for="Boat.Name" placeholder=" " />
+            <label asp-for="Boat.Name"></label>
+            <div class="slider"></div>
+        </div>
+        <div>
+            <span asp-validation-for="Boat.Name" class="error"></span>
+        </div>
 
-    <div class="input">
-        <input asp-for="Boat.Type" placeholder=" " />
-        <label asp-for="Boat.Type"></label>
-        <div class="slider"></div>
-    </div>
-    <div>
-        <span asp-validation-for="Boat.Type" class="error"></span>
-    </div>
+        <div class="input">
+            <input asp-for="Boat.Type" placeholder=" " />
+            <label asp-for="Boat.Type"></label>
+            <div class="slider"></div>
+        </div>
+        <div>
+            <span asp-validation-for="Boat.Type" class="error"></span>
+        </div>
 
-    <div class="input">
-        <input asp-for="Boat.Length" placeholder=" " />
-        <label asp-for="Boat.Length"></label>
-        <div class="slider"></div>
-    </div>
-    <div>
-        <span asp-validation-for="Boat.Length" class="error"></span>
-    </div>
+        <div class="input">
+            <input asp-for="Boat.Length" placeholder=" " />
+            <label asp-for="Boat.Length"></label>
+            <div class="slider"></div>
+        </div>
+        <div>
+            <span asp-validation-for="Boat.Length" class="error"></span>
+        </div>
 
-    <div class="input">
-        <input asp-for="Boat.Width" placeholder=" " />
-        <label asp-for="Boat.Width"></label>
-        <div class="slider"></div>
-    </div>
-    <div>
-        <span asp-validation-for="Boat.Width" class="error"></span>
-    </div>
+        <div class="input">
+            <input asp-for="Boat.Width" placeholder=" " />
+            <label asp-for="Boat.Width"></label>
+            <div class="slider"></div>
+        </div>
+        <div>
+            <span asp-validation-for="Boat.Width" class="error"></span>
+        </div>
 
-    <div class="input">
-        <input asp-for="Boat.Depth" placeholder=" " />
-        <label asp-for="Boat.Depth"></label>
-        <div class="slider"></div>
-    </div>
-    <div>
-        <span asp-validation-for="Boat.Depth" class="error"></span>
-    </div>
+        <div class="input">
+            <input asp-for="Boat.Depth" placeholder=" " />
+            <label asp-for="Boat.Depth"></label>
+            <div class="slider"></div>
+        </div>
+        <div>
+            <span asp-validation-for="Boat.Depth" class="error"></span>
+        </div>
 
-    <div class="select">
-        <label asp-for="Boat.PropulsionType"></label>
-        <select asp-for="Boat.PropulsionType">
-            <option value="Motorbåd/Jolle">Motorbåd/Jolle</option>
-            <option value="Sejlbåd/Kølbåd">Sejlbåd/Kølbåd</option>
-        </select>
-    </div>
+        <div class="select">
+            <label asp-for="Boat.PropulsionType"></label>
+            <select asp-for="Boat.PropulsionType">
+                <option value="Motorbåd/Jolle">Motorbåd/Jolle</option>
+                <option value="Sejlbåd/Kølbåd">Sejlbåd/Kølbåd</option>
+            </select>
+        </div>
 
-    <div class="select">
-        <label asp-for="Boat.Person"></label>
-        <select asp-for="Boat.Person" asp-items="ViewBag.Person"></select>
-    </div>
+        <div class="select">
+            <label asp-for="Boat.Person"></label>
+            <select asp-for="Boat.Person" asp-items="ViewBag.Person"></select>
+        </div>
 
-    <div class="select">
-        <label asp-for="Boat.Berth"></label>
-        <select asp-for="Boat.Berth" asp-items="ViewBag.Berth"></select>
-    </div>
+        <div class="select">
+            <label asp-for="Boat.Berth"></label>
+            <select asp-for="Boat.Berth" asp-items="ViewBag.Berth"></select>
+        </div>
 
-    <div class="textarea">
-        <label asp-for="Boat.Notes"></label>
-        <textarea asp-for="Boat.Notes"></textarea>
-    </div>
+        <div class="textarea">
+            <label asp-for="Boat.Notes"></label>
+            <textarea asp-for="Boat.Notes"></textarea>
+        </div>
 
-    <div class="submit">
-        <input type="submit" value="Opret Båd" class="create" />
-    </div>
-</form>
-
+        <div class="submit">
+            <input type="submit" value="Opret Båd" class="create" />
+        </div>
+    </form>
+}
 
 
 @section Scripts {
